--- a/client/src/styles/Register.css
+++ b/client/src/styles/Register.css
@@ -6,7 +6,7 @@ form {
   max-width: 400px;
   margin: 50px auto;
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: #161d6f;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
@@ -68,5 +68,5 @@ h2 {
   text-align: center;
   margin-bottom: 20px;
   color: #333;
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
 }
