--- a/client/src/styles/searchId.css
+++ b/client/src/styles/searchId.css
@@ -1,8 +1,8 @@
 .serach-id {
   padding: 20px;
-  max-width: 900px;
+  background-color: rgba(179, 179, 152, 0.931);
   margin: 0 auto;
-  background-color: #384b70;
+
   border-radius: 5px;
 }
 button {
