--- a/client/src/styles/DashBoardInfo.css
+++ b/client/src/styles/DashBoardInfo.css
@@ -1,6 +1,6 @@
 .card {
   width: 300px;
-  height: 400px;
+  height: 300px;
   padding: 20px;
   margin: 20px;
   background-color: #ffffff;
@@ -13,7 +13,9 @@
   transform: scale(1.05);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
-
+.card img {
+  height: 200px;
+}
 .dashboard-flex {
   display: flex;
   margin-top: 10px;
