--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -5,14 +5,14 @@
   padding: 20px;
   border-radius: 10px;
 
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
 .login-container h2 {
   margin-bottom: 20px;
   font-size: 24px;
-  color: #333;
+  color:black;
 }
 
 /* Form input styling */
