--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: flex-start;
   padding: 20px;
-  
+  background-image: radial-gradient(circle at center center, rgba(33,33,33,0),rgb(33,33,33)),repeating-linear-gradient(135deg, rgb(33,33,33) 0px, rgb(33,33,33) 1px,transparent 1px, transparent 4px),repeating-linear-gradient(45deg, rgb(56,56,56) 0px, rgb(56,56,56) 5px,transparent 5px, transparent 6px),linear-gradient(90deg, rgb(33,33,33),rgb(33,33,33));
   min-height: calc(100vh - 60px); /* Adjust according to your header/footer height */
   gap: 20px;
 }
