--- a/client/src/styles/ContactPage.css
+++ b/client/src/styles/ContactPage.css
@@ -13,11 +13,15 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  color:black;
+  background-image: radial-gradient(circle at center center, rgb(233, 255, 32),rgb(176, 209, 39),rgb(118, 163, 47),rgb(61, 116, 54),rgb(3, 70, 61));
 }
 
 .address-info, .hours-info, .social-media {
   margin-top: 20px;
+  color:black;
 }
+
 
 .social-icon {
   margin-right: 10px;
@@ -40,6 +44,7 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  
 }
 
 .faq-section {
