--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   gap: 2rem;
   padding: 4rem;
+  
 }
 
 .column {
@@ -22,11 +23,14 @@
   margin-bottom: 1.5rem;
 }
 
-.left-column p {
+ .left-column p {
   font-size: 1.1rem;
-  color: #333;
+  color: black;
   line-height: 1.6;
   margin-bottom: 2rem;
+  
+ 
+
 }
 
 ul {
@@ -61,6 +65,7 @@ ul li::before {
   padding: 1rem;
   max-width: 1200px;
   margin: 0 auto;
+  color: black;
 }
 
 .footer-section h3 {
