--- a/client/src/styles/AboutPage.css
+++ b/client/src/styles/AboutPage.css
@@ -76,7 +76,7 @@ h2 {
 p {
   font-size: 16px;
   line-height: 1.6;
-  color: #555; /* Soft dark grey for better readability */
+  color: black; /* Soft dark grey for better readability */
 }
 
 /* Layout container */
