--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -4,7 +4,7 @@
   margin: 100px auto;
   padding: 20px;
   border-radius: 10px;
-
+  background-image: radial-gradient(circle at top center, rgb(244, 234, 104),rgb(234, 179, 103),rgb(224, 125, 103),rgb(214, 70, 102),rgb(204, 15, 101));
   box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
