--- a/client/src/styles/AdminRegister.css
+++ b/client/src/styles/AdminRegister.css
@@ -1,13 +1,13 @@
-/* AdminLogin.css */
-.Admin-Container {
+/* AdminRegister.css */
+.Register-Container {
     max-width: 400px;
     margin: 50px auto;
     padding: 20px;
-    background-color: #f4f4f4; /* Light grey background */
+    background-color: #f4f4f4; /* Light background */
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
-    font-family: Arial, sans-serif;
+    font-family: 'Arial', sans-serif;
     background-image: radial-gradient(circle at top center, rgb(244, 234, 104),rgb(234, 179, 103),rgb(224, 125, 103),rgb(214, 70, 102),rgb(204, 15, 101));
   }
   
@@ -22,6 +22,7 @@
     flex-direction: column;
   }
   
+  input[type="text"],
   input[type="email"],
   input[type="password"] {
     padding: 10px;
@@ -31,6 +32,7 @@
     font-size: 16px;
   }
   
+  input[type="text"]:focus,
   input[type="email"]:focus,
   input[type="password"]:focus {
     outline: none;
@@ -53,11 +55,6 @@
     background-color: #0056b3;
   }
   
-  .error {
-    color: red;
-    margin-top: 10px;
-  }
-  
   p {
     font-size: 14px;
     margin-top: 15px;
@@ -70,5 +67,10 @@
   
   p a:hover {
     text-decoration: underline;
+  }
+  
+  .error {
+    color: red;
+    margin-top: 10px;
   }
   
